--- a/style.css
+++ b/style.css
@@ -81,20 +81,16 @@ a {
     font-size: 35px;
 }
 
-.side_1 {
-    display: flex;
+#senate {
     color: black;
-    width: 300px;
     font-size: 20px;
-    padding: 15px;
+    padding-left: 45px;
 }
 
-.side_2 {
-    display: flex;
+#sing {
     color: black;
-    width: 300px;
     font-size: 20px;
-    padding: 15px;
+    padding-left: 45px;
 }
 
 #trump_img {
@@ -104,22 +100,48 @@ a {
 }
 
 h2 {
-    font-size: 15px;
+    font-size: 20px;
     color: black;
 }
 
 ul {
     color: black;
     padding: 0;
-    font-size: 10px;
+    font-size: 15px;
 }
 
 #fienstien {
     width: 295px;
-    height: 150px;
+    height: 160px;
+    justify-content: center;
 }
 
 #eagles {
     width: 295px;
+    height: 160px;
+}
+
+#lorem {
+    color: black;
+    font-size: 15px;
+}
+
+#ipsum {
+    color: black;
+    font-size: 15px;
+}
+
+#exercise {
+    width: 275px;
     height: 150px;
+}
+
+#exercise_headline {
+    color: black;
+}
+
+#link_1 {
+    color: black;
+    text-decoration: underline;
+    font-size: 20px;
 }
