--- a/style.css
+++ b/style.css
@@ -104,10 +104,10 @@ h2 {
     color: black;
 }
 
-ul {
+#trump_para {
     color: black;
-    padding: 0;
     font-size: 15px;
+    list-style-type: none;
 }
 
 #fienstien {
@@ -131,6 +131,11 @@ ul {
     font-size: 15px;
 }
 
+#lorem_ipsum {
+    color: black;
+    font-size: 15px;
+}
+
 #exercise {
     width: 275px;
     height: 150px;
@@ -141,7 +146,13 @@ ul {
 }
 
 #link_1 {
-    color: black;
+    color: blue;
+    text-decoration: underline;
+    font-size: 20px;
+}
+
+#promo {
+    color: blue;
     text-decoration: underline;
     font-size: 20px;
 }
